<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_screen">background screen</string>
    <string name="logo_screen">logo_screen</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_on_you_city_and_dominate_the_legue">Find a team on you city and dominate the legue</string>
    <string name="get_started">GET STARTED</string>
    <string name="background_screen_league">background screen league</string>
    <string name="disired_league">Disired League</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">NEXT</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">BEGINNER</string>
    <string name="beller">BELLER</string>
    <string name="finish">FINISH</string>
    <string name="search_league">Looking for a co-od beginer league near you...</string>
</resources>
